SurfaceAggregator: Remove Missing Surfaces report

With OOP-D, after a Viz process crash, clients will start
resubmitting CompositorFrames in no paritcular order and
some references may not yet exist at aggregation time. In that
transient period, we shouldn't spew errors to console or to UMA
because this is an expected transient period. This CL simply
removes that error state. In the absence of a fallback surface,
we use the default background color of the SurfaceDrawQuad to fill
in the surface's area.

Bug: 865597
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I45d10c9a1880ea9df04dd7a95ef76048abc4a830
Reviewed-on: https://chromium-review.googlesource.com/1150574
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Saman Sami <samans@chromium.org>
Commit-Queue: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578060}
Former-commit-id: aec1f1576ed70cbdb40837814b6cf9c09e1f5bd0